Actions
Bug #11593
closediscsi: cast between incompatible function types
Start date:
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
Build errors with gcc 8:
../../common/io/scsi/adapters/iscsi/iscsi_login.c:238:8: error: cast between incompatible function types from 'iscsi_status_t (*)(void *)' {aka 'enum iscsi_status (*)(void *)'} to 'void (*)()' [-Werror=cast-function-type] (void(*)())iscsi_login_start, itp, DDI_SLEEP) != ^ ../../common/io/scsi/adapters/iscsi/iscsi_conn.c:1052:6: error: cast between incompatible function types from 'iscsi_status_t (*)(void *)' {aka 'enum iscsi_status (*)(void *)'} to 'void (*)()' [-Werror=cast-function-type] (void(*)())iscsi_login_start, itp, DDI_SLEEP) != ^ cc1: all warnings being treated as errors
Testing done: biuld/install/boot, using iscsi target with patched systems at both ends.
pool: zroot state: ONLINE scan: none requested config: NAME STATE READ WRITE CKSUM zroot ONLINE 0 0 0 c0t600144F07A6B316A00005DCFD2FD0001d0 ONLINE 0 0 0 errors: No known data errors root@test:~# format Searching for disks...done AVAILABLE DISK SELECTIONS: 0. c0t600144F07A6B316A00005DCFD2FD0001d0 <SUN-COMSTAR-1.0-10.00GB> /scsi_vhci/disk@g600144f07a6b316a00005dcfd2fd0001 1. c3t0d0 <VMware,-VMware Virtual S-1.0-30.00GB> /pci@0,0/pci15ad,1976@10/sd@0,0 2. c3t1d0 <VMware,-VMware Virtual S-1.0-10.00GB> /pci@0,0/pci15ad,1976@10/sd@1,0 Specify disk (enter its number): ^D
Updated by Electric Monk over 2 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 9fe633fd812f2df2354dc88fd3f7f50e94bd8eb3
commit 9fe633fd812f2df2354dc88fd3f7f50e94bd8eb3 Author: Toomas Soome <tsoome@me.com> Date: 2019-11-17T08:24:18.000Z 11593 iscsi: cast between incompatible function types Reviewed by: Andrew Stormont <andyjstormont@gmail.com> Reviewed by: Yuri Pankov <yuri.pankov@nexenta.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions