usr/src/uts/common/io/scsi/adapters/iscsi/iscsi.h
@@ -385,7 +385,7 @@ typedef enum iscsi_cmd_text_stage {
 #define	ISCSI_CMD_MISCFLAG_INTERNAL	0x1
 #define	ISCSI_CMD_MISCFLAG_FREE		0x2
 #define	ISCSI_CMD_MISCFLAG_STUCK	0x4
-#define	ISCSI_CMD_MISCFLAG_XARQ 	0x8
+#define	ISCSI_CMD_MISCFLAG_XARQ		0x8
 #define	ISCSI_CMD_MISCFLAG_SENT		0x10
 #define	ISCSI_CMD_MISCFLAG_FLUSH	0x20
 
@@ -1174,7 +1174,7 @@ typedef struct iscsi_hba {
 	 *	  - need to be exclusive
 	 *
 	 * The service has three status:
-	 * 	ISCSI_SERVICE_ENABLED	 -	client is permitted to
+	 *	ISCSI_SERVICE_ENABLED	 -	client is permitted to
 	 *				 -	request service
 	 *
 	 *	ISCSI_SERVICE_DISABLED	 -	client is not permitted to
@@ -1266,6 +1266,7 @@ void iscsi_enqueue_cmd_head(iscsi_cmd_t **, iscsi_cmd_t **,
     iscsi_cmd_t *);
 
 /* iscsi_login.c */
+void iscsi_login_cb(void *arg);
 iscsi_status_t iscsi_login_start(void *arg);
 void iscsi_login_update_state(iscsi_conn_t *icp,
     iscsi_login_state_t next_state);
